# Voice-Studio

./: .env.example  .gitignore  Makefile  README.md  ROADMAP.md  current-tasks.md  package-lock.json  package.json  pyproject.toml  start_studio.sh
.github/workflows/: ci.yml
.history/2026-05-23/: code-map_manifest.md  current-tasks.md
.history/2026-05-23/sectionA/: current-tasks.md  db_models.py  manifest_schema.py  pyproject.toml  s2s_session.py
.history/2026-05-24/: README.md
apps/server/: pyproject.toml
apps/server/oas_server/: __init__.py  auth.py  handlers.py  main.py
apps/server/oas_server/jobs/: __init__.py  asr_eval.py  codec_train.py  hf_model_download.py  kernel_bench.py  llm_eval.py  llm_finetune.py  pretrain.py  s2s_native_finetune.py  tts_finetune.py  whisper_finetune.py
apps/server/oas_server/middleware/: __init__.py
apps/server/oas_server/routers/: audit.py  auth.py  compute.py  datasets.py  experiments.py  health.py  kernels.py  models.py  plans.py  plugins.py  projects.py  s2s.py  serve.py  settings.py  system.py  uploads.py  ws.py
apps/server/oas_server/s2s/: __init__.py  native_session.py  session.py
apps/server/oas_server/serving/: __init__.py  cache.py
apps/web/: next.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/web/e2e/: auth.spec.ts  happy_path.spec.ts  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: AudioUploader.tsx  Card.tsx  ComingSoon.tsx  EvalResults.tsx  MetricCharts.tsx  PageHeader.tsx  PromptDictionary.tsx  Sidebar.tsx  StatusPill.tsx  VersionPicker.tsx
apps/web/src/lib/: api.ts  auth.ts  languages.ts  sentences.ts  useCurrentUser.ts  utils.ts
docs/: architecture.md  plugins.md  sdk.md
infra/compose/: docker-compose.yml
infra/docker/: server.Dockerfile  server.cuda.Dockerfile  web.Dockerfile
plugins/example/: pyproject.toml
plugins/example/oas_example_plugin/: __init__.py  handlers.py
scripts/: gen_openapi_client.sh
tests/core/: conftest.py  test_db.py  test_manifest.py  test_manifest_append.py  test_manifest_update.py  test_plugin_discovery.py  test_queue.py  test_registry.py  test_storage.py  test_storage_factory.py
tests/sdk/: conftest.py  test_sdk.py
tests/server/: conftest.py  test_api.py  test_architecture_lab.py  test_asr_eval_and_augmentations.py  test_auth.py  test_collaboration_and_scale.py  test_datasets_dedup.py  test_datasets_filters.py  test_datasets_lineage.py  test_datasets_splits.py  test_e2e.py  test_kernels_and_evals.py  test_llm_robustness_and_serve.py  test_native_s2s.py  test_phase1.py  test_plugins_sdk.py  test_rate_limit.py  test_request_id.py  test_round4.py  test_s2s.py  test_s2s_pipeline_telemetry.py  test_tts_studio_and_stream.py
(+49 files in other folders)
