[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "oas-example-plugin"
version = "0.1.0"
description = "Reference plugin demonstrating Open Audio Studio's handler entry-point API"
requires-python = ">=3.11"
dependencies = ["oas-core"]

[project.entry-points."oas.handlers"]
echo_plus = "oas_example_plugin.handlers:echo_plus"

[tool.setuptools.packages.find]
include = ["oas_example_plugin*"]
